test_suite/tests/ui/with-variant/skip_de_tuple_field.stderr
error: variant `Tuple` cannot have both #[serde(deserialize_with)] and a field #0 marked with #[serde(skip_deserializing)]
 --> tests/ui/with-variant/skip_de_tuple_field.rs:5:5
  |
5 | /     #[serde(deserialize_with = "deserialize_some_other_variant")]
6 | |     Tuple(#[serde(skip_deserializing)] String, u8),
  | |__________________________________________________^
